--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -17,8 +17,10 @@
         </h3>
       </div>
       <div class="col-sm-3 text-right">
-        <%= link_to "Edit", edit_query_path(@query, params: variable_params(@query)), class: "btn btn-default", disabled: !@query.editable?(blazer_user) %>
-        <%= link_to "Fork", new_query_path(params: variable_params(@query).merge(fork_query_id: @query.id, data_source: @query.data_source, name: @query.name)), class: "btn btn-info" %>
+        <% if write_access? %>
+          <%= link_to "Edit", edit_query_path(@query, params: variable_params(@query)), class: "btn btn-default", disabled: !@query.editable?(blazer_user) %>
+          <%= link_to "Fork", new_query_path(params: variable_params(@query).merge(fork_query_id: @query.id, data_source: @query.data_source, name: @query.name)), class: "btn btn-info" %>
+        <% end %>
 
         <% if !@error && @success %>
           <%= button_to "Download", run_queries_path(format: "csv"), params: run_data, class: "btn btn-primary" %>
@@ -54,27 +56,27 @@
   </div>
 
   <script>
-    function showRun(data) {
-      $("#results").html(data)
-      $("#results table").stupidtable(stupidtableCustomSettings).stickyTableHeaders({fixedOffset: 60})
-    }
+      function showRun(data) {
+          $("#results").html(data)
+          $("#results table").stupidtable(stupidtableCustomSettings).stickyTableHeaders({fixedOffset: 60})
+      }
 
-    function showError(message) {
-      $("#results").addClass("query-error").html(message)
-    }
+      function showError(message) {
+          $("#results").addClass("query-error").html(message)
+      }
 
-    <%= blazer_js_var "data", run_data %>
+      <%= blazer_js_var "data", run_data %>
 
-    runQuery(data, showRun, showError)
+      runQuery(data, showRun, showError)
   </script>
 <% end %>
 
 <% unless %w(mongodb).include?(Blazer.data_sources[@query.data_source].adapter) %>
   <script>
-    // do not highlight really long queries
-    // this can lead to performance issues
-    if ($("code").text().length < 10000) {
-      hljs.highlightBlock(document.getElementById("code"));
-    }
+      // do not highlight really long queries
+      // this can lead to performance issues
+      if ($("code").text().length < 10000) {
+          hljs.highlightBlock(document.getElementById("code"));
+      }
   </script>
 <% end %>
